Refactor worker RPC into batch process
Replace the scenario-specific RPC runner with a reusable `RpcProcess` that parses input lines once, executes bounded concurrent WorkerGroup calls, preserves result order, and supports optional middleware. Split the integration into `cli`, `runtimeapi`, `process`, and `scenario` packages; move scenario validation to in-memory acceptance checks with JSONL as diagnostic output; and update the main entrypoint, docs, and tests to match the new process model.